--- a/client/main/assets/base.css
+++ b/client/main/assets/base.css
@@ -131,5 +131,11 @@ th {
    background: #1b435e;
    }
 
+#logout {
+    position: fixed;
+    top: 30px;
+    right: 5px;
+    color: black;
+}
 
 
