--- a/client/assets/base.css
+++ b/client/assets/base.css
@@ -1,8 +1,65 @@
-body, html {
-	font-size: medium;
-	background:#444; 
-	text-align:center; 
-	padding:50px 0;
+@import url(http://fonts.googleapis.com/css?family=Exo:100,200,400);
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:700,400,300);
+
+body {
+  margin: 0;
+  padding: 80px 80px;
+  background: #fff;
+  font-family: Arial;
+  font-size: 12px;
+  text-align:center; 
+  background-image: url("theme.jpg");
+}
+
+
+
+.exit-btn:after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+}
+.exit-btn { 
+    border: none;
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    background: none;
+    cursor: pointer;
+    padding: 25px 80px;
+    display: inline-block;
+    margin: 15px 30px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 700;
+    outline: none;
+    position: relative;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s; 
+}
+.exit-btn:before {
+    height: 60px;
+    width: 100%;
+    line-height: 60px;
+    background: #fff;
+    color: #3399cc;
+    border-radius: 10px 10px 0 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    font-size: 140%;
+    font-family: 'Glyphicons Halflings';
+    content: "\e017";
+}
+.exit-btn {
+    padding: 80px 20px 20px 20px;
+    border-radius: 10px;
+    box-shadow: 0 3px #2c85b1;
+    background: #3399cc;
+    color: #fff;
 }
 
 /* The CSS */
@@ -44,7 +101,7 @@ input[type=text] {
     width: 175px; 
     display: inline-block;
   	float: left;
-  } 
+} 
 
 table {
 	font: normal 20px courier !important;
